@@ -191,46 +191,46 @@ static const char UserLibName[] = CLASS;
 /* Here's our global data, described above. */
 
 #if defined(__amigaos4__)
-struct Library *MUIMasterBase;
-struct Library *SysBase;
-struct Library *UtilityBase;
-struct Library *DOSBase;
-struct Library *GfxBase;
-struct Library *IntuitionBase;
-struct MUIMasterIFace *IMUIMaster;
-struct ExecIFace *IExec;
-struct UtilityIFace *IUtility;
-struct DOSIFace *IDOS;
-struct GraphicsIFace *IGraphics;
-struct IntuitionIFace *IIntuition;
+struct Library *MUIMasterBase = NULL;
+struct Library *SysBase       = NULL;
+struct Library *UtilityBase   = NULL;
+struct Library *DOSBase       = NULL;
+struct Library *GfxBase       = NULL;
+struct Library *IntuitionBase = NULL;
+struct MUIMasterIFace *IMUIMaster = NULL;
+struct ExecIFace *IExec           = NULL;
+struct UtilityIFace *IUtility     = NULL;
+struct DOSIFace *IDOS             = NULL;
+struct GraphicsIFace *IGraphics   = NULL;
+struct IntuitionIFace *IIntuition = NULL;
 #else
-struct Library        *MUIMasterBase;
-struct ExecBase       *SysBase;
-struct Library        *UtilityBase;
-struct DosLibrary     *DOSBase;
-struct GfxBase        *GfxBase;
-struct IntuitionBase  *IntuitionBase;
+struct Library        *MUIMasterBase = NULL;
+struct ExecBase       *SysBase       = NULL;
+struct Library        *UtilityBase   = NULL;
+struct DosLibrary     *DOSBase       = NULL;
+struct GfxBase        *GfxBase       = NULL;
+struct IntuitionBase  *IntuitionBase = NULL;
 #endif
 
 #ifdef SUPERCLASS
-static struct MUI_CustomClass *ThisClass;
+static struct MUI_CustomClass *ThisClass = NULL;
 #endif
 
 #ifdef SUPERCLASSP
-static struct MUI_CustomClass *ThisClassP;
+static struct MUI_CustomClass *ThisClassP = NULL;
 #endif
 
 #ifdef __GNUC__
   #ifdef USE_UTILITYBASE
-  struct Library *__UtilityBase; // required by libnix & clib2
+  struct Library *__UtilityBase = NULL; // required by libnix & clib2
   #endif
   #ifdef __libnix__
     /* these one are needed copies for libnix.a */
     #ifdef USE_MATHIEEEDOUBBASBASE
-    struct Library *__MathIeeeDoubBasBase;
+    struct Library *__MathIeeeDoubBasBase = NULL;
     #endif
     #ifdef USE_MATHIEEEDOUBTRANSBASE
-    struct Library *__MathIeeeDoubTransBase;
+    struct Library *__MathIeeeDoubTransBase = NULL;
     #endif
   #endif
 #endif /* __GNUC__ */
@@ -468,8 +468,6 @@ struct LibraryHeader * ASM SAVEDS LibInit(struct LibraryHeader *base, BPTR libra
   IExec = pIExec;
   SysBase = (struct Library *)sb;
 
-  D(bug("start... (segment=%08lx)\n",librarySegment));
-
   base->lh_Library.lib_Node.ln_Type = NT_LIBRARY;
   base->lh_Library.lib_Node.ln_Pri  = 0;
   base->lh_Library.lib_Node.ln_Name = (char *)UserLibName;
@@ -513,8 +511,6 @@ struct LibraryHeader * ASM SAVEDS LibInit(REG(a0, BPTR Segment), REG(a6, struct 
 
   SysBase = sb;
 
-  D(bug( "Start...\n" ) );
-
   // make sure that this is really a 68020+ machine if optimized for 020+
   #if _M68060 || _M68040 || _M68030 || _M68020 || __mc68020 || __mc68030 || __mc68040 || __mc68060
   if(!(SysBase->AttnFlags & AFF_68020))
@@ -529,14 +525,11 @@ struct LibraryHeader * ASM SAVEDS LibInit(REG(a0, BPTR Segment), REG(a6, struct 
   stack->stk_Upper  = (ULONG)( (ULONG)stack->stk_Lower + 8192 );
   stack->stk_Pointer  = (APTR)stack->stk_Upper;
 
-  D(bug( "Before StackSwap()\n" ) );
   StackSwap( stack );
   #endif
 
   if((base = (struct LibraryHeader *)MakeLibrary((APTR)LibVectors,NULL,NULL,sizeof(struct LibraryHeader),NULL)))
   {
-    D(bug( "After MakeLibrary()\n" ) );
-
     base->lh_Library.lib_Node.ln_Type = NT_LIBRARY;
     base->lh_Library.lib_Node.ln_Name = (char *)UserLibName;
     base->lh_Library.lib_Flags        = LIBF_CHANGED | LIBF_SUMUSED;
@@ -556,7 +549,6 @@ struct LibraryHeader * ASM SAVEDS LibInit(REG(a0, BPTR Segment), REG(a6, struct 
 
     //if(UserLibInit((struct Library *)base))
     {
-      D(bug( "AddLibrary()\n") );
       AddLibrary((struct Library *)base);
     }
     /*else
@@ -566,15 +558,10 @@ struct LibraryHeader * ASM SAVEDS LibInit(REG(a0, BPTR Segment), REG(a6, struct 
     }
     */
   }
-  else
-  {
-    D(bug("\7MakeLibrary() failed\n") );
-  }
 
   #if defined(CLASS_STACKSWAP)
   StackSwap(base->lh_Stack);
   FreeMem(base->lh_Stack, sizeof(struct StackSwapStruct) + 8192);
-  D(bug( "After second StackSwap()\n" ) );
   #endif
 
   return(base);
@@ -598,19 +585,15 @@ BPTR ASM SAVEDS LibExpunge(REG(a6, struct LibraryHeader *base))
 #endif
   BPTR rc;
 
-  D(bug( "OpenCount = %ld\n", base->lh_Library.lib_OpenCnt ) );
-
   if(base->lh_Library.lib_OpenCnt > 0)
   {
     base->lh_Library.lib_Flags |= LIBF_DELEXP;
-    D(bug("Setting LIBF_DELEXP\n") );
     return(0);
   }
 
   /*
   if(!UserLibExpunge(&base->lh_Library))
   {
-    D(bug("UserLibExpunge() failed, setting LIBF_DELEXP\n"));
     base->lh_Library.lib_Flags |= LIBF_DELEXP;
     return(0);
   }
@@ -650,8 +633,6 @@ struct LibraryHeader * ASM SAVEDS LibOpen(REG(a6, struct LibraryHeader *base))
 
   base->lh_Library.lib_OpenCnt++;
 
-  D(bug( "OpenCount = %ld\n", base->lh_Library.lib_OpenCnt ) );
-
   if(UserLibOpen(&base->lh_Library))
   {
     #ifdef CLASS_VERSIONFAKE
@@ -665,7 +646,6 @@ struct LibraryHeader * ASM SAVEDS LibOpen(REG(a6, struct LibraryHeader *base))
   {
     rc = NULL;
     base->lh_Library.lib_OpenCnt--;
-    D(bug("\7UserLibOpen() failed\n") );
   }
 
   #ifdef USE_SEMAPHORE
@@ -695,8 +675,6 @@ BPTR ASM SAVEDS LibClose(REG(a6, struct LibraryHeader *base))
   #ifdef USE_SEMAPHORE
   ObtainSemaphore(&base->lh_Semaphore);
   #endif
-
-  D(bug( "OpenCount = %ld %s\n", base->lh_Library.lib_OpenCnt, base->lh_Library.lib_OpenCnt == 0 ? "\7ERROR" : "" ) );
 
   UserLibClose((struct Library *)base);
 
@@ -737,8 +715,6 @@ BOOL UserLibOpen(struct Library *base)
   BOOL PreClassInitFunc(void);
   BOOL ClassInitFunc(struct Library *base);
 
-  D(bug( "OpenCount = %ld\n", base->lib_OpenCnt ) );
-
   if (base->lib_OpenCnt!=1)
     return(TRUE);
 
@@ -746,7 +722,7 @@ BOOL UserLibOpen(struct Library *base)
   #define MASTERVERSION MUIMASTER_VMIN
   #endif
 
-  if((MUIMasterBase = OpenLibrary("muimaster.library", MASTERVERSION)) &&
+  if((MUIMasterBase = OpenLibrary(MUIMASTER_NAME, MASTERVERSION)) &&
      GETINTERFACE(IMUIMaster, MUIMasterBase))
   {
   	    #ifdef PreClassInit
@@ -787,6 +763,10 @@ BOOL UserLibOpen(struct Library *base)
            GETINTERFACE(IGraphics, GfxBase) &&
            GETINTERFACE(IIntuition, IntuitionBase))
         {
+          #if defined(DEBUG)
+          SetupDebug();
+          #endif
+
           #ifndef ClassInit
           return(TRUE);
           #else
@@ -819,8 +799,6 @@ BOOL UserLibOpen(struct Library *base)
     MUIMasterBase = NULL;
   }
 
-  D(bug("fail.: %08lx %s\n",base,base->lib_Node.ln_Name) );
-
   return(FALSE);
 }
 
@@ -831,8 +809,6 @@ BOOL UserLibClose(struct Library *base)
 {
   VOID PostClassExitFunc(void);
   VOID ClassExitFunc(struct Library *base);
-
-  D(bug( "OpenCount = %ld\n", base->lib_OpenCnt ) );
 
   if (base->lib_OpenCnt==1)
   {
