@@ -96,4 +96,5 @@ void PostClassExitFunc(void)
 /*                                                                            */
 /******************************************************************************/
 
+#define USE_UTILITYBASE
 #include "mccheader.c"
